@@ -1,3 +1,4 @@
+- Calendar: When adding participants, check if participant already can be found, if so then update the existing one, otherwise create a new one.
 - Calendar: Fixed double deletion of events when removing a calendar.
 - Weekly recurring events without an BYDAY directive will recur on the correct day when the event start between 00:00 and 01:00
 
